# whosai

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  render.yaml
docs/: observability.md
docs/adr/: 0001-four-seat-mvp-rules.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/e2e/: game-lifecycle.spec.ts
frontend/src/: App.test.tsx  App.tsx  api.ts  i18n.tsx  languageContext.ts  styles.css  types.ts  useGameSession.ts  useLanguage.ts
src/whosai/: __init__.py  main.py
src/whosai/ai/: __init__.py  chat.py  graph.py  models.py  player.py  prompt.py  providers.py  scripted.py  simulation.py
src/whosai/ai/prompts/: phases.yaml  system.yaml
src/whosai/application/: AI_SCHEDULING.md  game_service.py  models.py  ports.py  scheduling.py
src/whosai/domain/: __init__.py  game.py  keywords.py
src/whosai/infrastructure/: memory.py  timers.py
src/whosai/transport/: http.py
tests/integration/: test_ai_provider_contract.py  test_game_http.py  test_game_scheduling.py  test_game_service.py  test_health.py
tests/live/: test_deepseek_ai.py
tests/unit/: test_ai_chat.py  test_ai_graph.py  test_ai_providers.py  test_ai_simulation.py  test_game.py  test_scheduling.py
